# python-rrmngmnt

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: publish.yml  test.yml
rrmngmnt/: __init__.py  common.py  db.py  errors.py  executor.py  filesystem.py  firewall.py  host.py  network.py  nmcli.py  operatingsystem.py  package_manager.py  playbook_runner.py  power_manager.py  resource.py  service.py  ssh.py  storage.py  user.py
tests/: __init__.py  common.py  docker-compose.yml  test_common.py  test_db.py  test_docker.py  test_executor.py  test_filesystem.py  test_firewall.py  test_host.py  test_network.py  test_nmcli.py  test_os.py  test_package_manager.py  test_playbook_runner.py  test_power_manager.py  test_service.py  test_user.py
