[metadata]
name = python-rrmngmnt
author = Lukas Bednar
author-email = lukyn17@gmail.com
summary = Tool to manage remote systems and services
description-file = README.md
home-page = https://github.com/rhevm-qe-automation/python-rrmngmnt
license = GPLv2
classifier =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    remote
    resource
    service
[files]
packages =
    rrmngmnt
[bdist_rpm]
requires =
    python-paramiko
    python-netaddr
    python-pbr
