[metadata]
name = python-rrmngmnt
author = Lukas Bednar
author-email = lukyn17@gmail.com
summary = Tool to manage remote systems and services
description-file = README.rst
home-page = https://github.com/rhevm-qe-automation/python-rrmngmnt
license = GPLv2
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    remote
    resource
    service
[files]
packages =
    rrmngmnt
[bdist_rpm]
requires =
    python-paramiko
    python-netaddr
    python-six
build_requires =
    python
    python-setuptools
    python-pbr
[sdist]
formats = zip
